wrap padding fix mobile, meta theme color

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -768,6 +768,7 @@ hr {
 
     .wrap {
         margin: 0 auto;
+        padding: 0;
     }
 
     .aside {
